IPP/projects/IPP-test.php-master/parse-only/vyzi_tests/should-pass/esc_sequence.src
.IPPcode19
move GF@antuh string@tau\093ntaohu\319natuh\204toauhn#\204 tahutn
