IPP/projects/IPP-test.php-master/parse-only/vyzi_tests/should-fail/wrong_esc_sequence2.src
.IPPcode19
MOVE GF@natuht string@natu\1a9astnuh
